# salata

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPECS.md  config.toml
.github/workflows/: docs.yml  release.yml
crates/salata-cgi/: Cargo.toml
crates/salata-cli/: Cargo.toml
crates/salata-core/: Cargo.toml
crates/salata-fastcgi/: Cargo.toml
crates/salata-server/: Cargo.toml
crates/salata-server/src/: hot_reload.rs  main.rs  static_files.rs
crates/salata-server/tests/: server_test.rs
docker/: .dockerignore  Dockerfile  Dockerfile.test  docker-compose.yml
docs/: book.toml
docs/book/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-a0371dd6.js  toc-ee8c5bd3.js  toc.html
docs/src/: SUMMARY.md  introduction.md
errors/: 404.slt  500.slt
examples/: README.md
playground/: Dockerfile.playground  README.md  docker-compose.playground.yml  start-playground.bat  start-playground.ps1  start-playground.sh
scripts/: detect-runtimes.bat  detect-runtimes.ps1  detect-runtimes.sh
specs/: ARCHITECTURE.md  CONFIGURATION.md  DIRECTIVES_AND_MACROS.md  EXAMPLES.md  PLAYGROUND.md  PROJECT_STRUCTURE.md  README.md  RUNTIMES.md  SECURITY.md  TESTING.md  UNIFORM_AST.md  parser.md  rust.md
tests/e2e/: run_tests.sh  test_config.toml
tests/fixtures/: basic.slt  directives.slt  html_only.slt  include_basic.slt  include_nested.slt  include_with_runtime.slt  isolated_python.slt  isolated_scope.slt  javascript_only.slt  js_print_helpers.slt  macros_cross_runtime.slt  multi_language.slt  multi_runtime.slt  php_only.slt  (+10 more)
(+201 files in other folders)
